--- a/Presentation/Presentation.tex
+++ b/Presentation/Presentation.tex
@@ -266,7 +266,7 @@ Faculty Mentors: I. Ipsen and R. Smith}
 	\column{.6\textwidth}
 	\begin{itemize}
 		\item If dim(design space) increases then computation expense increases.
-		\item Sensitivity Analysis $\rightarrow$ Measure of influence
+		\item Measure of influence
 		\item Locally $\rightarrow$ around a point (Gradient).
 		\item Globally $\rightarrow$ Overall sensitivity (Sobol Indices).
 		\item $Y = G(X_{1},...,X_{n})$
