--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -457,11 +457,12 @@ $
     Therefore, the optimum inner diameter($d_{\text{i}}$), optimum wire diameter ($d_{\text{w}}$), and optimum number of coils ($N_{\text{t}}$) are $30 mm$, $1 mm$ and $17$, respectively.
 		
 \newpage
-%-----------------------------------Computational Experiments.2-----------------------------------%
 
+%-----------------------------------Computational Experiments.2-----------------------------------%
 \subsection{Case 2:}
 \label{subsec:Case2}
 %Case_56_3891011
+
 \vspace{-.1in}
 \begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries Design Variables:}, labelindent = 1cm]
 	\item[Objectives:] Minimize spring rate and spring index.\\
@@ -502,26 +503,17 @@ $
 	\vspace{-.2in}
 	\begin{equation}
 					\begin{gathered}
-<<<<<<< HEAD
 	 					\min_{d_{\text{i}}, d_{\text{w}}, N_{\text{t}}} 0.5 \times\left(\frac{k}{k_{\text{max}}}\right) + 0.5 \times (\frac{C}{C_{\text{max}}}) \\
-=======
-	 					\min_{} 0.5 \times\left(\frac{k}{k_{max}}\right) + 0.5 \times \left( \frac{C}{C_{max}}\right) \\
->>>>>>> 0ed6c04cebc8382dd077252ea7b2dbbe8f7940b3
 	 					\mbox{subject to} \\%\mathbf{G}(\mathbf{x}) \le \mathbf{0}, 
 						\begin{split}
 							 d_{\text{i}} + 2 \times d_{\text{w}} \leq 60 \times 10^{-3} mm\\
 							 g_{\text{min}} - \dfrac{L_{\text{hard}} - N_{\text{t}}d_{\text{w}}}{N_{\text{t}}-1} \leq 0\\
 							 \frac{L_{\text{free}}}{d_{\text{i}} + d_{\text{w}}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}} \leq 0\\
 							 d_{\text{w}} + \sqrt{(d_{\text{i}} + d_{\text{w}})^{2} + \frac{p^{2} - d_{\text{w}}}{\pi^{2}}} - d_{o}^{max} < 0\\
-<<<<<<< HEAD
 							 \frac{G(L_{\text{free}} - L_{\text{hard}})}{4 \pi (N_{\text{t}} - 2) } \left[\frac{d_{\text{w}} (4d_{\text{i}}^{2} + 9.46d_{\text{i}} d_{\text{w}} + 3 d_{\text{w}}^{2})}{d_{\text{i}}(d_{\text{i}}+d_{\text{w}})^{3}}\right] - UTS \leq 0\\
 							 \frac{4}{G_{\text{sr}}\theta d_{\text{w}}^{4}}\int_0^{d_{\text{w}}} r^2 \left( (G_{\text{sr}}\theta r)^{-n} + \frac{c}{k} G_{\text{sr}}nt^k \right)^{-\frac{1}{n}} \,\mathrm{d} r \ge .85\\
 							 \mbox{where, } \quad
 							  \theta = {2s\over \pi N_a (d_{\text{i}}+d_{\text{w}})^2}\\
-=======
-							 \frac{G(L_{free} - L_{hard})}{4 \pi (N_{t} - 2) } \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] - UTS \leq 0\\
-							 \frac{2\pi N_{\text{a}} (d_{\text{i}}+d_{\text{w}})^2}{Gsd_{\text{w}}^4}\int_0^{d_\text{w}} r^2 \left(\left(\frac{2Gsr}{\pi N_{\text{a}} (d_{\text{i}}+d_{\text{w}})^2}\right)^{-n} + {c\over k} Gnt^k \right)^{-{1\over n}} \,\mathrm{d} r\geq .85\\
->>>>>>> 0ed6c04cebc8382dd077252ea7b2dbbe8f7940b3
 							 20 \times 10 ^{-3} mm \leq d_{i} \leq 30 \times 10^{-3} mm\\	 
 							 1 \times 10^{-3} mm \leq d_{w} \leq 5 \times 10^{-3} mm\\	 
 							 9 \leq N_{\text{t}} \leq 17\\	 
@@ -529,32 +521,7 @@ $
 					\end{gathered}
 					\label{eq:Case_2_Problem_Definition}	
 				\end{equation}
-<<<<<<< HEAD
 Similar to the first case study, $\textbf{x}$ is a $3 \times 1$ vector, where $x_{1}$, $x_{2}$ and $x_{3}$ represents the inner diameter ($d_{\text{i}}$), wire diameter ($d_{\text{w}}$) and total number of coils $N_{\text{t}}$, respectively.
-=======
-	
-%	\centerline{$Min$ \hspace{2 mm}$0.5 \times(k/k_{max}) + 0.5 \times (C/C_{max})$}
-%	\begin{center}such that \end{center}
-%	\centerline{$d_{i} + 2 \times d_{w} \leq 60e-3$}
-%	\centerline{$g_{min} - \dfrac{L_{hard} - N_{t}d_{w}}{N_{t}-1} \leq 0$}
-%	\centerline{$\dfrac{L_{free}}{d_{i} + d_{w}} - \pi \sqrt{\frac{2(2 \nu + 1)}{\nu + 2}} \leq 0$}
-%	\centerline{$d_{\text{w}} + \sqrt{(d_{\text{i}} + d_{\text{w}})^{2} + \frac{p^{2} - d_{\text{w}}}{\pi^{2}}} - d_{o}^{max} < 0$}
-%			
-%	\centerline{$\frac{G(L_{free} - L_{hard})}{4 \pi (N_{t} - 2) } \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
-%d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] - UTS \leq 0$}
-%    \centerline{$20e-3 \leq d_{i} \leq 30e-3$}
-%    \centerline{$1e-3 \leq d_{w} \leq 5e-3$}
-%    \centerline{$9 \leq N_{t} \leq 17$}
-%    
-% \centerline{${4\over G_{sr}\theta d_{\text{w}}^4}\int_0^{d_{\text{w}}} r^2 \left( (G_{sr}\theta r)^{-n} + {c\over k} G_{sr}nt^k \right)^{-{1\over n}} \,\mathrm{d} r \ge .85$}
-%%\begin{center} where $\theta = {2s\over \pi N_a (d_{\text{i}}+d_{\text{w}})^2}$ \end{center}
-%\centerline{where $\theta = {2s\over \pi N_a (d_{\text{i}}+d_{\text{w}})^2}$}
-
-\begin{flushleft}
-Similar to the first case study, $\textbf{x}$ is a $3 \times 1$ vector, where $x_{1}$, $x_{2}$ and $x_{3}$ represents the inner diameter ($d_{i}$), wire diameter ($d_{w}$) and total number of coils $N_{t}$ respectively.
-\end{flushleft}
->>>>>>> 0ed6c04cebc8382dd077252ea7b2dbbe8f7940b3
-
 
 \newpage
 \subsubsection{Feasibility}
@@ -583,7 +550,6 @@ Similar to the first case study, $\textbf{x}$ is a $3 \times 1$ vector, where $x
 
 
 From the sensitivity indices, it can be observed that all the design variables have significant influence on the objective function; therefore no dimension reduction is implemented for design optimization. 
-
 
 \subsubsection{Optimization}
 	
@@ -614,22 +580,11 @@ More analysis of the stress relaxation and creep could result in better performa
 
 In this work, the DIRECT algorithm for global optimization is used for the design of springs. Also, computational experiments have been carried to perform design optimization considering tolerances in design variables but not incorporated in the design tool; this is an future work of importance. Other future work is to considering faster single-loop techniques, faster analytical and sampling techniques such as First Order Reliability Methods (FORM), and Importance sampling need to be considered
 
-% The key highlights of this tool are (1) Allows for flexible optimization, which enables design of springs with interchanging objective functions and constraints, (2)Can incorporate stress relaxation in the design process, (3) Provides a feasibility design space given the constraints, (4)Provide the global sensitivity indices of the design variables to the objective function. 
-% The ability to interchange constraints and objective functions with any number of design variables allows the user the utmost flexibility. With the addition of feasibility and sensitivity analysis it is possible for any configuration of objective function, constraints, and design variables to be analyzed for refinement. The quantification of stress relaxation and creep allow the user a chance to incorporate these properties into any configuration, especially those that have never been tested. The sensitivity indices serves two purposes - help the designer understand which variables have the most influence on the objective function and also help in dimension reduction in the design space for a faster optimization.
-
-%Provide some highlights of object-oriented programming for Spring model design
-%
-%A couple of sentences of stress relaxation
-
-
-
-%In this work, the nested double-loop approach is used for global sensitivity analysis. As the dimension of design variables increases, the nested double-loop approach becomes computationally very intensive. Therefore, more faster single-loop techniques should be considered. Also, reliability analysis within the optimization procedure is carried out using Monte Carlo sampling. As the complexity of the problem increases, in terms of the number of design variables and the number of constraints, Monte Carlo sampling becomes very intensive. Therefore, faster analytical and sampling techniques such as First Order Reliability Methods (FORM), Importance sampling need to be considered.
-
-
-
+%-----------------------------------------------------------------Appendix-----------------------------------------------------------------%
 \section{Appendix}
 \label{sec:Appendix}
 
+%-----------------------------------The Approach.6-----------------------------------%
 \subsection{Basics Regarding Stress Relaxation and Creep}
 
 A rocket mounted spring is expected to deliver normal mechanical output under extreme temperatures. The analysis of creep behavior helps us design a spring to meet the requirements under rough conditions.
@@ -646,7 +601,7 @@ The starting point is the assumption that the creep rate may be described as a p
 \[
 \epsilon_{cr}(\sigma,T,t)=f_\sigma (\sigma) f_T(T) f_t(t)
 \]
-The widely used functions of stress $f_\sigma(\sigma)$ are (\cite{Creep}):
+The widely used functions of stress $f_\sigma(\sigma)$ are~\cite{Creep}:
 
 \begin{tabular}{ll}
 $a\sigma^n$ & Norton, 1929, Bailey, 1929 \\
@@ -662,7 +617,7 @@ f_T(T) = \exp \left( {-Q\over RT}\right)
 \]
 where $Q$ and $R$ denote the activation energy and the Boltzmann's constant.
 
-The time dependence part $f_t(t)$ is assumed to be (\cite{Ch2000}):
+The time dependence part $f_t(t)$ is assumed to be~\cite{Ch2000}.
 
 \begin{tabular}{ll}
 $t$ & secondary creep \\
@@ -675,7 +630,7 @@ For simplicity, we are going to only use the Norton-Bailey law and ignore any de
 
 \subsection{Stress Relaxation of Helical Springs}
 
-The following section is based on the paper(\cite{Relaxation1}). Due to conservation of the total shear strain, the sum of the creep strain $\epsilon_{cr}$'s rate of change and that of elastic shear strain $\epsilon_{el}$ is zero:
+The following section is based on the paper~\cite{Relaxation1}. Due to conservation of the total shear strain, the sum of the creep strain $\epsilon_{cr}$'s rate of change and that of elastic shear strain $\epsilon_{el}$ is zero:
 \[
 \dot{\epsilon}_{cr} + \dot{\epsilon}_{el} = 0
 \]
@@ -718,11 +673,11 @@ where
 \[
 \theta = {2s\over \pi N_a ((d_{\text{i}}+d_{\text{o}})/2)^2}
 \]
-The integral has no endpoint singularity and can be integrated to high order precision using the Gauss quadrature formula. The closer this quantity is to $1$, the better the spring quality is. We notice a seemingly simpler hypergeometric function has been presented in the paper (\cite{Ko2014}) which we find to yield unrealistic values due to divergence issues.
+The integral has no endpoint singularity and can be integrated to high order precision using the Gauss quadrature formula. The closer this quantity is to $1$, the better the spring quality is. We notice a seemingly simpler hypergeometric function has been presented in the paper~\cite{Relaxation3} which we find to yield unrealistic values due to divergence issues.
 
 
 \subsection{Creep of Helical Springs}
-This section is based on the paper(\cite{Relaxation3}). The starting point is still the Norton-Bailey law (\ref{eq:N-B}). There is naturally another way to write the shear strain rate:
+This section is based on the paper~\cite{Relaxation3}. The starting point is still the Norton-Bailey law~(\ref{eq:N-B}). There is naturally another way to write the shear strain rate:
 \[
 \dot{\epsilon}_{cr} = \dot{\theta} r = {8\dot{s} r\over \pi N_{\text{a}} (d_{\text{i}}+d_{\text{o}})^2}
 \]
@@ -733,24 +688,16 @@ P^0{d_{\text{i}}+d_{\text{o}}\over 4}=M(0)=2\pi\int_0^{d_{\text{w}}} r^2 \sigma(
 \]
 It can be deduced that the spring length $s$ follows
 \[
-s(t) = s(0) + \left( {(d_{\text{i}}+d_{\text{o}})P_z^0\over \pi}{4+3n\over n+1} \right)^{n+1} {\pi (d_{\text{i}}+d_{\text{o}})^2 N_a c\over 8kd_w^{4+3n}} t^k
+s(t) = s(0) + \left( {(d_{\text{i}}+d_{\text{o}})P^0\over \pi}{4+3n\over n+1} \right)^{n+1} {\pi (d_{\text{i}}+d_{\text{o}})^2 N_a c\over 8kd_w^{4+3n}} t^k
 \]
 where $s(0)$ is the initial spring length. The less the difference of the spring length $s(t)-s(0)$, the better the spring quality is.
  
- \cite{Ch2000} \cite{Relaxation1} \cite{Relaxation2} \cite{Relaxation3} \cite{Creep} 
-
-
-
-
 \vfill\pagebreak
 
+%-----------------------------------------------------------------References-----------------------------------------------------------------%	
 
-	
-	\bibliographystyle{ieetr}
-
+\bibliographystyle{ieetr}
 \bibliography{MyBib}
-
-
 
 \end{document}
 
